--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,5 @@ include('infrastructure:persistence')
 include('presentation')
 include('presentation:api')
 include('presentation:cli')
+include('presentation:i18n')
+include('presentation:l10n')
