--- a/presentation/api/build.gradle
+++ b/presentation/api/build.gradle
@@ -1,3 +1,28 @@
 plugins {
     id 'com.programpanel.application'
+    id 'org.springframework.boot' version '3.0.4'
+}
+
+ext.springBootVersion = '3.0.4'
+ext.springVersion = '6.0.6'
+ext.tomcatVersion = '11.0.0-M4'
+ext.jacksonVersion = '2.14.2'
+
+dependencies {
+    // External dependencies
+    implementation("org.springframework:spring-context:${springVersion}")
+    implementation("org.springframework:spring-web:${springVersion}")
+    implementation("org.springframework:spring-webmvc:${springVersion}")
+    implementation("org.springframework.boot:spring-boot:${springBootVersion}")
+    implementation("org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}")
+    implementation("org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}")
+    implementation("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}")
+    testImplementation("org.springframework:spring-test:${springVersion}")
+    testImplementation("org.springframework.boot:spring-boot-test:${springBootVersion}")
+}
+
+bootRun {
+    mainClassName = 'com.programpanel.presentation.api.ApiApplication'
 }
