Translate informal greet message

--- a/presentation/api/build.gradle
+++ b/presentation/api/build.gradle
@@ -3,12 +3,16 @@ plugins {
     id 'org.springframework.boot' version '3.0.4'
 }
 
-ext.springBootVersion = '3.0.4'
+ext.springBootVersion = '3.1.0'
 ext.springVersion = '6.0.6'
 ext.tomcatVersion = '11.0.0-M4'
 ext.jacksonVersion = '2.14.2'
+ext.hamcrestVersion = '2.2'
 
 dependencies {
+    // Project dependencies
+    implementation(project(':presentation:g11n'))
+
     // External dependencies
     implementation("org.springframework:spring-context:${springVersion}")
     implementation("org.springframework:spring-web:${springVersion}")
@@ -19,8 +23,10 @@ dependencies {
     implementation("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jacksonVersion}")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}")
+    testImplementation("org.hamcrest:hamcrest-core:${hamcrestVersion}")
     testImplementation("org.springframework:spring-test:${springVersion}")
     testImplementation("org.springframework.boot:spring-boot-test:${springBootVersion}")
+    testImplementation("org.springframework.boot:spring-boot-test-autoconfigure:${springBootVersion}")
 }
 
 bootRun {
