--- a/presentation/cli/build.gradle
+++ b/presentation/cli/build.gradle
@@ -1,3 +1,25 @@
 plugins {
     id 'com.programpanel.application'
+    id 'org.springframework.boot' version '3.0.4'
+}
+
+ext.springBootVersion = '3.1.0'
+ext.springShellVersion = '3.1.0'
+ext.springVersion = '6.0.6'
+
+dependencies {
+    // Project dependencies
+    implementation(project(':presentation:g11n'))
+
+    // External dependencies
+    implementation("org.springframework.shell:spring-shell-autoconfigure:${springShellVersion}")
+    implementation("org.springframework.shell:spring-shell-core:${springShellVersion}")
+    implementation("org.springframework.shell:spring-shell-standard:${springShellVersion}")
+    implementation("org.springframework.shell:spring-shell-standard-commands:${springShellVersion}")
+    implementation("org.springframework.shell:spring-shell-table:${springShellVersion}")
+    testImplementation("org.springframework:spring-test:${springVersion}")
+    testImplementation("org.springframework.boot:spring-boot-test:${springBootVersion}")
+    testImplementation("org.springframework.boot:spring-boot-test-autoconfigure:${springBootVersion}")
+    testImplementation("org.springframework.shell:spring-shell-test:${springShellVersion}")
+    testImplementation("org.springframework.shell:spring-shell-test-autoconfigure:${springShellVersion}")
 }
