--- a/settings.gradle
+++ b/settings.gradle
@@ -27,5 +27,4 @@ include('infrastructure:persistence')
 include('presentation')
 include('presentation:api')
 include('presentation:cli')
-include('presentation:i18n')
-include('presentation:l10n')
+include('presentation:g11n')
